# copier-python-package-template

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _typos.toml  biome.jsonc  copier.yml  mutex_queue  pylintrc.toml  pyproject.toml  pytest.ini  ruff-test.toml  ruff.toml  sh.bat
.devcontainer/: Dockerfile  create-aws-profile.sh  devcontainer.json  docker-compose.yml  envs.json  initialize-command.sh  install-ci-tooling.py  install-ci-tooling.sh  manual-setup-deps.py  manual-setup-deps.sh  on-create-command-boilerplate.sh  on-create-command.sh  post-start-command.sh  windows-host-helper.sh
.github/: dependabot.yml  pull_request_template.md  renovate.json5
.github/reusable_workflows/: build-docker-image.yaml
.github/workflows/: checks.yaml  ci.yaml  dependabot-post-update.yaml  get-values.yaml  hash_git_files.py  pre-commit.yaml  replace_private_package_registries.py  tag-on-merge.yaml
extensions/: context.py
src/: git_tag.py
template/: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml.jinja  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md.jinja  _typos.toml  pyproject.toml.jinja  pyrightconfig.json  pytest.ini  ruff-test.toml  ruff.toml  sh.bat  {% if create_docs %}.readthedocs.yaml{% endif %}.jinja
template/.devcontainer/: Dockerfile  code-artifact-auth.sh.jinja  create-aws-profile.sh  create-aws-profile.sh.jinja  devcontainer.json.jinja  docker-compose.yml.jinja  initialize-command.sh  install-ci-tooling.py.jinja  install-ci-tooling.sh.jinja  manual-setup-deps.py  manual-setup-deps.sh.jinja  (+3 more)
(+30 files in other folders)
