[project]
name = "copier-python-package-template"
version = "0.1.0"
description = "Copier template for creating Python libraries and executables"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Managed by upstream template
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-randomly>=3.16.0",
    "pyright[nodejs]==1.1.400", # temporarily pin due to bug in 1.1.401 https://github.com/microsoft/pyright/issues/10487
    "copier>=9.7.1",
    "copier-templates-extensions>=0.3.1"

    # Specific to this template


]
