[project]
name = "copier-python-package-template"
version = "0.1.0"
description = "Copier template for creating Python libraries and executables"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Managed by upstream template
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "pyright[nodejs]>=1.1.402",
    "copier>=9.7.1",
    "copier-templates-extensions>=0.3.1"

    # Specific to this template


]
